--- a/public/dashbrew/bower.json
+++ b/public/dashbrew/bower.json
@@ -5,7 +5,9 @@
     "Mohamed Elkholy <mmdkholy@gmail.com>"
   ],
   "dependencies": {
+    "jquery": "~1.9.0",
     "bootstrap": "~3.2.0",
+    "jquery.cookie": "~1.4.0",
     "font-awesome": "~4.2.0",
     "list.js": "~1.1.1",
     "list.pagination.js": "~0.1.1"
