--- a/.gitattributes
+++ b/.gitattributes
@@ -2,11 +2,11 @@
 * text=auto
 
 # Declare files that will always have UNIX line endings on checkout.
-config/* text=lf
-public/* text=lf
-provision/main/* text=lf
-provision/post/* text=lf
-provision/pre/* text=lf
+config/* text eol=lf
+public/* text eol=lf
+provision/main/* text eol=lf
+provision/post/* text eol=lf
+provision/pre/* text eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
